--- a/theme.css
+++ b/theme.css
@@ -1,13 +1,33 @@
 h1{
-
 	font-family: Florence, cursive;
 	line-height: 100px;
-	
+
+	height: 100px;	
 	color: #ECDAAD;
 	background-image: url('http://i.imgur.com/dJxLnJf.png');
 	background-size: 25% 100%;
 	background-repeat: repeat-x;
 	position: center top;
+}
+
+#intro{
+	font-family: Florence, cursive;
+}
+
+#left{
+	width: 20%;
+	float: left;
+}
+
+#right{
+	width: 20%;
+	float: right;
+}
+
+#mid{
+	width: 60%;
+	position: absolute;
+	padding-left: 20%;
 }
 
 input{
@@ -27,16 +47,21 @@ body{
 	
 	background-color: #D4A07D;	
 	font-family: Florence, cursive;
-	padding-left: 11em;
-	padding-right: 11em;
 }
 
 table, td, th{
 	
 	padding: 15px;
+	padding-right: 0px;
 }
 
 td.loginform{
+	
+	padding-left: 150px;
+
+}
+
+td.registerform{
 	
 	padding-left: 150px;
 }
@@ -49,3 +74,10 @@ ul.Menu{
 	width: 9em;
 }
 
+#footer{
+
+	text-align: center;
+	position: absolute;
+	bottom: 0px;
+	padding-left: 30%;
+}
